<resources>
    <string name="app_name">QuizTimeApp</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_are_here_to">You are here to...</string>
    <string name="take_quiz">TAKE QUIZ</string>
    <string name="or">OR</string>
    <string name="make_quiz">MAKE QUIZ</string>
    <string name="title">Title: </string>
    <string name="enter_quiz_s_title">Enter quiz\'s title</string>
    <string name="duration">Duration: </string>
    <string name="online_notice">Your quiz has been saved locally in offline storage.\nTo let others try your quiz, you have to make it online</string>
    <string name="online_info">When you make your quiz available ONLINE, plenty of benefits are waiting for you to explore:\n
        1) Your quiz will be saved on our database, which allows you to review and modify it\n
        2) You can share and challenge others to do your quiz\n
        - You will receive feedback (scores,ratings,review,etc) from whose taking your quiz\n
        - You will also able to review, grade and send back feedback for whom doing your quiz\n
        - There are no limits on how many people you share your quiz at one time. BUT there is a limit of 5 times ONLY for you to share a quiz with others.
    </string>
    <string name="offline_info">When your quiz is saved on local offline-storage. There are some restrictions:\n
        1) Your quiz will be saved locally for 5 days. After 5 days, the system will automatically deleted your quiz\n
        HOWEVER, you can always MAKE IT ONLINE before your quiz reaches 5-day-expiration\n
        2) You can review your quiz, but cannot edit it. Edit/Modify feature only available when you make your quiz online\n
    </string>

    //Sign Up strings
    <string name="SignUp">Sign Up </string>
    <string name="Name">Name: </string>
    <string name="Email">Email: </string>
    <string name="PhoneNumber">Phone Number (Optional): </string>
    <string name="password">Password: </string>
    <string name="Type">You are: </string>
    <string name="student">Student </string>
    <string name="teacher">Teacher </string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="description">Description:</string>
    <string name="total">Total Questions: </string>
    <string name="list_of_questions">List of questions:</string>
    <string name="this_is_the_quiz_for">This is the quiz for...</string>
    <string name="offline_only">OFFLINE ONLY</string>
    <string name="successfully_saved">Successfully saved!</string>
    <string name="make_it_online">MAKE IT ONLINE!</string>
    <string name="preview">PREVIEW</string>
    <string name="question">Question:</string>
    <string name="correct_answer">Correct Answer:</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="ok_good_to_go">OK, good to go!</string>
    <string name="your_email_address">Your Email Address:</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="share_my_quiz_to">Share my quiz to:</string>
    <string name="done">DONE</string>
    <string name="save_draft">SAVE DRAFT</string>
    <string name="saved">SAVED!</string>
    <string name="saved_local_mess">Your quiz has been sucuessfully saved!\nNow, you can view or edit your quiz at Local Storage</string>

    <string name="multiple_choice">Multiple Choice</string>
    <string name="short_answer">Short Answer</string>
    <string name="what_type_of_question_you_want_to_add">What type of question you want to add?</string>
    <string name="question_content">Question Content</string>
    <string name="type">Type:</string>
    <string name="question_s_answer">question\'s answer</string>
    <string name="answer">Answer:</string>
    <string name="attachment">Attachment:</string>
    <string name="delete_this_question">Delete This Question</string>
    <string name="ok">OK</string>
    <string name="question_type">Question Type:</string>
    <string name="question_content3">Question Content:</string>
    <string name="enter_your_question_here">Enter your question here</string>
    <string name="image">Image:</string>
    <string name="attach_file">attach file</string>
    <string name="add">ADD</string>
    <string name="textview">TextView</string>
    <string name="please_type_your_answer_here">Please type your answer here</string>
    <string name="warning">WARNING!</string>
    <string name="warning_mess">Your question content will not be saved if you choose cancel!</string>
    <string name="warning_mess2">You don\'t have any answer for this question.\nYou can add it now by clicking the " + " circle button. \nOR\nYou can add the answer later</string>
    <string name="ok_do_it">OK, DO IT!</string>
    <string name="do_not_cancel">DO NOT CANCEL</string>
    <string name="ok_will_do_later">OK, WILL DO LATER!</string>
    <string name="I_want_to_add_now">I WANT TO ADD ANSWER NOW</string>
    <string name="please_enter_your_quiz_code_below">Please enter your Quiz Code below:</string>
    <string name="question_s_content">Question\'s content</string>
    <string name="attach_image">Attach Image:</string>
    <string name="enter_your_answer_here">Enter your answer here</string>
    <string name="hello">Hello!</string>


</resources>
