<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".feature_makequiz.PreviewQuizActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/preview"
        android:textColor="@color/colorDarkPurple"
        android:textColorHint="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:drawableTint="#673AB7"
        app:drawableLeftCompat="@drawable/ic_eye_black_24" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:text="@string/question"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_preview_question_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:scrollbars="vertical"
        android:text=""
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:text="@string/correct_answer"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listView_preview_answerList"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/button_preview_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:drawableLeft="@drawable/ic_arrow_back_purple_24"
            android:text="@string/back"
            android:onClick="handle_Back_clicked"
            app:backgroundTint="@color/colorPurple" />

        <Button
            android:id="@+id/button_preview_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:drawableRight="@drawable/ic_arrow_forward_purple_24"
            android:text="@string/next"
            android:onClick="handle_Next_clicked"
            app:backgroundTint="@color/colorDarkPurple" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_preview_OK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:text="@string/ok_good_to_go"
            android:onClick="handle_finishPreview_clicked"
            app:backgroundTint="@color/colorAccent" />
    </LinearLayout>

</LinearLayout>
